[gd_scene load_steps=2 format=3 uid="uid://bayy07rqyfiiy"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_qsjct"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qsjct")

[node name="BtHost" type="Button" parent="."]
layout_mode = 0
offset_left = 995.0
offset_top = 201.0
offset_right = 1101.0
offset_bottom = 241.0
text = "Host"

[node name="BtJoin" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 271.0
offset_right = 1101.0
offset_bottom = 309.0
text = "Join"

[node name="BtStart" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 339.0
offset_right = 1100.0
offset_bottom = 374.0
text = "Start Game"

[node name="LabelName" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 43.0
offset_right = 103.0
offset_bottom = 69.0
text = "Name:"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 41.0
offset_right = 574.0
offset_bottom = 72.0

[connection signal="button_down" from="BtHost" to="." method="_on_bt_host_button_down"]
[connection signal="button_down" from="BtJoin" to="." method="_on_bt_join_button_down"]
[connection signal="button_down" from="BtStart" to="." method="_on_bt_start_button_down"]
